--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,18 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.2
   intl: ^0.19.0
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  geolocator_windows: ^0.2.3
+  baseflow_plugin_template: ^2.2.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  flutter_dotenv: ^5.2.1
+  expansion_tile_card: ^3.0.0
+  camera: ^0.11.0+2
+  path_provider: ^2.1.4
+  path: ^1.9.0
+  custom_radio_grouped_button: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +77,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
