--- a/api.yaml
+++ b/api.yaml
@@ -327,6 +327,16 @@ paths:
           required: true
           schema:
             type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                data:
+                  type: object
+              required:
+                - data
       responses:
         "200":
           description: Imagen subida con éxito
