--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   custom_radio_grouped_button: ^2.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
