--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   custom_radio_grouped_button: ^2.2.1
   image_picker: ^1.1.2
   flutter_launcher_icons: ^0.14.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
