--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-android/app/.cxx/*
-android/app/build/
+/android/app/.cxx/*
+/android/app/build/
 
 .vscode
